--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Adding something to the readme!
-Something!!!!
+The start of my submission for MIT's 2012 BattleCode competition (battlecode.org).
+Obviously I didn't get anywhere. :(
